re PR c++/65876 ([C++11] ICE in cxx_eval_call_expression, at cp/constexpr.c:1358)

PR c++/65876
	* constexpr.c (cxx_eval_call_expression): Fail gracefully if cgraph
	threw away DECL_SAVED_TREE.

From-SVN: r222628